--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "author": "Robin Deits",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "^5.47.1",
-    "webpack-cli": "^4.7.2",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
     "webpack-license-plugin": "^4.2.0"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.10.0",
+    "@ffmpeg/ffmpeg": "^0.10.1",
     "ccapture.js": "aceslowman/ccapture.js#npm-fix",
     "dat.gui": "^0.7.7",
     "msgpack-lite": "^0.1.26",
